--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "onStartupFinished"
   ],
   "main": "./out/extension.js",
+  "enabledApiProposals": [],
   "contributes": {
     "viewsContainers": {
       "activitybar": [
@@ -147,6 +148,7 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.0.0",
     "@types/vscode": "^1.85.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -157,15 +159,16 @@
     "typescript": "^5.3.0"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "vscode-languageclient": "^9.0.1",
     "vscode-languageserver": "^9.0.1",
-    "axios": "^1.6.2"
+    "vscode-languageserver-textdocument": "^1.0.12"
   },
   "optionalDependencies": {
+    "better-sqlite3": "^9.2.2",
     "tree-sitter": "^0.20.4",
     "tree-sitter-javascript": "^0.20.3",
-    "tree-sitter-typescript": "^0.20.5",
     "tree-sitter-python": "^0.20.4",
-    "better-sqlite3": "^9.2.2"
+    "tree-sitter-typescript": "^0.20.5"
   }
 }
