Epic 4 (Sprints 7-8): Intelligence Layer - Ollama + DeepSeek-Coder-V2 Integration
WP 4.1: Ollama + DeepSeek Integration
- OllamaService: Core LLM service with HTTP client for Ollama API
- Health checks, model management, code analysis capabilities
- Specialized prompts for endpoint generation, test creation, code fixing

WP 4.2: Test Case Generation
- TestGenerator: Playwright/Cypress E2E test generation
- Batch test generation with progress tracking
- Test suite scaffolding with data-testid attribution

WP 4.3: Remediation Suggestion Engine
- RemediationEngine: AI-powered code fix suggestions
- Auto-apply capability with preview workflow
- Confidence scoring and time estimation
- Multi-file support via WorkspaceEdit

WP 4.4: Natural Language Reporting
- ReportGenerator: Executive reports in Markdown/HTML/JSON
- Metrics calculation: gaps, severity, fix time estimates
- Key findings extraction and recommendation generation
- Beautiful HTML reports with charts and formatting

Extension Integration:
- Initialized LLM services on activation with health checks
- New commands: analyzeCodeWithAI, generateReport, configureOllama
- Updated generateTests command with AI-powered test generation
- Enhanced fixGap command with AI remediation and auto-apply
- Configuration: ollamaEndpoint, autoApplyRemediations, testFramework

Features:
- Real-time Ollama health monitoring
- Model selection and configuration UI
- AI code analysis for selected code or entire file
- Executive report generation with multiple formats
- Automated test suite creation from detected gaps
- One-click remediation with preview/apply workflow

--- a/package.json
+++ b/package.json
@@ -104,6 +104,21 @@
         "command": "reposense.copyGapDetails",
         "title": "Copy Gap Details",
         "icon": "$(copy)"
+      },
+      {
+        "command": "reposense.analyzeCodeWithAI",
+        "title": "RepoSense: Analyze Code with AI",
+        "icon": "$(sparkle)"
+      },
+      {
+        "command": "reposense.generateReport",
+        "title": "RepoSense: Generate Executive Report",
+        "icon": "$(file-text)"
+      },
+      {
+        "command": "reposense.configureOllama",
+        "title": "RepoSense: Configure Ollama",
+        "icon": "$(settings-gear)"
       }
     ],
     "menus": {
@@ -201,6 +216,26 @@
           ],
           "default": "deepseek-coder:6.7b",
           "description": "Local LLM model for intelligent analysis"
+        },
+        "reposense.ollamaEndpoint": {
+          "type": "string",
+          "default": "http://localhost:11434",
+          "description": "Ollama API endpoint URL"
+        },
+        "reposense.autoApplyRemediations": {
+          "type": "boolean",
+          "default": false,
+          "description": "Automatically apply AI-generated remediations without preview"
+        },
+        "reposense.testFramework": {
+          "type": "string",
+          "enum": [
+            "playwright",
+            "cypress",
+            "auto"
+          ],
+          "default": "auto",
+          "description": "Preferred E2E testing framework for generated tests"
         },
         "reposense.excludePatterns": {
           "type": "array",
