--- a/package.json
+++ b/package.json
@@ -260,21 +260,32 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "vscode-test"
+    "test": "node ./out/test/runTest.js",
+    "test:unit": "mocha --require ts-node/register 'src/test/suite/**/*.test.ts'",
+    "coverage": "c8 npm test",
+    "coverage:report": "c8 report --reporter=html --reporter=text"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
+    "@types/chai": "^5.2.3",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^20.0.0",
+    "@types/sinon": "^21.0.0",
     "@types/vscode": "^1.85.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vscode/test-cli": "^0.0.4",
     "@vscode/test-electron": "^2.3.8",
+    "c8": "^10.1.3",
+    "chai": "^6.2.2",
     "eslint": "^8.50.0",
+    "mocha": "^11.7.5",
+    "sinon": "^21.0.1",
     "typescript": "^5.3.0"
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "glob": "^10.5.0",
     "vscode-languageclient": "^9.0.1",
     "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.12"
