Epic 5 (Sprint 10): WP 5.5 - Error Handling & Resilience
Global Error Handling:
- ErrorHandler singleton class with process-level exception handlers
- Uncaught exception handler with user-friendly messages
- Unhandled promise rejection handler
- Error log with max 100 entries (LRU eviction)

User-Friendly Error Messages:
- Error code mapping (ECONNREFUSED, ENOTFOUND, ETIMEDOUT, etc.)
- Context-aware messages for common scenarios:
  * Ollama not running  'Start Ollama to use AI features'
  * Model not found  'Install with: ollama pull <model>'
  * Workspace missing  'Open a folder to use RepoSense'
  * Parse errors  'File contains syntax errors'
- Learn More links to documentation/help
- GitHub issue reporter with pre-filled error details

Retry Logic:
- withRetry() helper with exponential backoff
- Configurable: max attempts, delay, backoff multiplier
- Retryable error filtering (ETIMEDOUT, ECONNRESET, etc.)
- Used in OllamaService for network resilience

Error Severity Levels:
- CRITICAL: Process-stopping errors  Error notification
- ERROR: Operation failures  Error notification
- WARNING: Non-blocking issues  Warning notification
- INFO: Informational  Info notification

Telemetry Integration:
- Optional error telemetry (disabled by default)
- Privacy-respecting: only error types and contexts
- Configuration: reposense.telemetry.enabled
- Placeholder for Application Insights integration

Service Integration:
- OllamaService upgraded with error handling:
  * Health checks silent on failure
  * List models with retry logic (2 attempts, 500ms delay)
  * Generate with retry (3 attempts, exponential backoff)
  * Model 404 errors  specific user message
- Extension activation initializes ErrorHandler

Error Context Tracking:
- Operation name, component name, additional info
- Timestamps, stack traces, error names
- Severity classification for proper routing
- Error log accessible for debugging

Helper Functions:
- handleError(error, operation, component, options)
- withR

--- a/package.json
+++ b/package.json
@@ -237,6 +237,11 @@
           "default": "auto",
           "description": "Preferred E2E testing framework for generated tests"
         },
+        "reposense.telemetry.enabled": {
+          "type": "boolean",
+          "default": false,
+          "description": "Enable anonymous error telemetry to help improve RepoSense (requires restart)"
+        },
         "reposense.excludePatterns": {
           "type": "array",
           "default": [
