--- a/package.json
+++ b/package.json
@@ -340,6 +340,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "glob": "^10.5.0",
+    "uuid": "^13.0.0",
     "vscode-languageclient": "^9.0.1",
     "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.12"
