--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "name": "reposense",
   "displayName": "RepoSense - AI Code Analyzer & UAT Assistant",
   "description": "Intelligent frontend-backend gap detection, automated test generation, and one-click remediation. Zero-cost AI powered by local LLM.",
@@ -41,7 +41,7 @@
     "url": "https://github.com/Data-Scientist-MSL/RepoSense/issues"
   },
   "homepage": "https://github.com/Data-Scientist-MSL/RepoSense#readme",
-  "license": "MIT",
+  "license": "AGPL-3.0",
   "activationEvents": [
     "onStartupFinished"
   ],
