--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,20 +26,17 @@ jobs:
     - name: Install dependencies
       run: npm ci --ignore-scripts
     
-    - name: Lint (allow warnings)
-      run: npm run lint || true
-      continue-on-error: true
+    - name: Lint
+      run: npm run lint
     
     - name: Compile
       run: npm run compile
     
     - name: Run tests
-      run: npm test || echo "Tests require VS Code environment"
-      continue-on-error: true
+      run: npm test
     
     - name: Security audit
-      run: npm audit --audit-level=high || true
-      continue-on-error: true
+      run: npm audit --audit-level=critical
     
     - name: Upload lint results
       if: always()
@@ -71,8 +68,7 @@ jobs:
       run: npm run compile
     
     - name: Generate coverage report
-      run: npm run coverage || echo "Coverage generation requires VS Code environment"
-      continue-on-error: true
+      run: npm run coverage
     
     - name: Upload coverage reports
       if: always()
